# ai-agent-smart-assist

./: .gitignore  Dockerfile  Makefile  README.md  clean_env.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: diagram.yml
data/: download_data.py
data/data/: Boston.txt  Chicago.txt  Houston.txt  Seattle.txt  Toronto.txt
data/raw_docs/: contract.txt  demo.txt  invoice.txt  medical.txt  resume.txt
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentResultCard.tsx  ErrorBanner.tsx  FileUploader.tsx  LoadingSpinner.tsx  PipelineStatus.tsx  Sidebar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx  textarea.tsx
frontend/lib/: utils.ts
frontend/public/samples/: demo.txt
frontend/styles/: global.css
langchain_ai_agent/agents/: base_agent.py  chat_agent.py
langchain_ai_agent/agents/tools/: kb_tool.py  risk_tool.py  summarize_tool.py  triage_tool.py
langchain_ai_agent/api/: ingest_api.py  main.py  query_api.py  run_ingestion_pipeline.py  schemas.py
langchain_ai_agent/config/: ingestion_config.yml
langchain_ai_agent/feedback_loop/: memory_store.py
langchain_ai_agent/ingestion/: README.md  reader.py
langchain_ai_agent/pipelines/: __main__.py  doc_to_action_pipeline.py
langchain_ai_agent/retriever/: vector_store.py
tests/: test_api.py  test_chat_agent.py  test_ingest_api.py  test_kb_tool.py  test_memory_store.py  test_query_api.py  test_risk_tool.py  test_run_ingestion_pipeline.py  test_summarize_tool.py  test_triage_tool.py  test_vector_store.py
